# dnsquery

./: .gitignore  CMakeLists.txt  README.md
demo/: main.cpp
include/dnsquery/: dnsquery.hpp
source/: dnsquery.cpp
